<resources>
    <string name="app_name">Folha de Ponto</string>
    <string name="entrar">Entrar</string>
    <string name="text_cadastro">Clique aqui para primeiro acesso</string>
    <string name="title_cadastro">Cadastre-se</string>
    <string name="title_activity_menu_lateral">MenuLateral</string>
    <string name="nav_abrir">Abrir</string>
    <string name="nav_fechar">Fechar</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_ajuda">Ajuda</string>
    <string name="menu_configuracoes">Configurações</string>
    <string name="menu_home">Home</string>
    <string name="menu_inscricoes">Inscrições</string>
    <string name="menu_mensagens">Mensagens</string>
    <string name="menu_ponto_eletronico">Ponto Eletrônico</string>
    <string name="menu_rh">RH</string>
    <string name="menu_sair">Sair</string>
</resources>