<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_mensagens"
            android:icon="@drawable/ic_message"
            android:title="@string/menu_mensagens" />
    </group>

    <item
        android:title="Ponto Eletrônico">

        <menu>
            <item
                android:id="@+id/nav_ponto"
                android:icon="@drawable/ic_clock"
                android:title="@string/menu_ponto" />
            <item
                android:id="@+id/nav_espelho_de_ponto"
                android:icon="@drawable/ic_assignment"
                android:title="@string/menu_espelho_ponto"/>
        </menu>
    </item>

    <item
        android:title="Solicitações">

        <menu>
            <item
                android:id="@+id/nav_rh"
                android:icon="@drawable/ic_document"
                android:title="@string/menu_rh" />
        </menu>
    </item>

    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_configuracoes"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_configuracoes"/>
            <item
                android:id="@+id/nav_ajuda"
                android:icon="@drawable/ic_help"
                android:title="@string/menu_ajuda"/>
            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/ic_exit"
                android:title="@string/menu_sair" />
        </menu>
    </item>

</menu>