<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_ajuda"
        android:name="com.rafael.folhadeponto.ui.ajuda.AjudaFragment"
        android:label="@string/menu_ajuda"
        tools:layout="@layout/fragment_ajuda" />

    <fragment
        android:id="@+id/nav_configuracoes"
        android:name="com.rafael.folhadeponto.ui.configuracoes.ConfiguracoesFragment"
        android:label="@string/menu_configuracoes"
        tools:layout="@layout/fragment_configuracoes" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rafael.folhadeponto.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_espelho_de_ponto"
        android:name="com.rafael.folhadeponto.ui.espelhoDePonto.EspelhoDePontoFragment"
        android:label="@string/menu_espelho_ponto"
        tools:layout="@layout/fragment_espelho_de_ponto" />

    <fragment
        android:id="@+id/nav_mensagens"
        android:name="com.rafael.folhadeponto.ui.mensagens.MensagensFragment"
        android:label="@string/menu_mensagens"
        tools:layout="@layout/fragment_mensagens" />

    <fragment
        android:id="@+id/nav_ponto"
        android:name="com.rafael.folhadeponto.ui.ponto.PontoFragment"
        android:label="@string/menu_ponto"
        tools:layout="@layout/fragment_ponto" />

    <fragment
        android:id="@+id/nav_rh"
        android:name="com.rafael.folhadeponto.ui.rh.RhFragment"
        android:label="@string/menu_rh"
        tools:layout="@layout/fragment_rh" />

    <fragment
        android:id="@+id/nav_sair"
        android:name="com.rafael.folhadeponto.ui.sair.SairFragment"
        android:label="@string/menu_sair"
        tools:layout="@layout/fragment_sair" />
</navigation>